# maxo

./: .gitignore  .justfile  call_pather_renderer.py  pyproject.toml
.github/workflows/: setup.yml
examples/: 1_echo_bot.py  2_keyboard.py  3_filters_and_middlewares.py  3_fsm.py  4_fsm.py  4_state.py
src/maxo/: __init__.py  backoff.py  loggers.py  omit.py
src/maxo/_adaptix/: has_tag_provider.py  with_parents.py
src/maxo/_internal/: get_caller_module.py
src/maxo/_internal/_adaptix/: has_tag_provider.py
src/maxo/alta/: dispatcher.py
src/maxo/alta/builders/: __init__.py  attachment_request.py  keyboard.py
src/maxo/alta/facades/: __init__.py  middleware.py
src/maxo/alta/iterators/: chat_members.py  chats.py
src/maxo/alta/long_polling/: long_polling.py
src/maxo/alta/state/: __init__.py  key_builder.py  manager.py
src/maxo/alta/state_system/: __init__.py  filter.py  manager.py  middleware.py
src/maxo/alta/upload_media/: buffered.py  file_system.py
src/maxo/bot/: _warming_up.py  api_client.py  bot.py  state.py  warming_up.py
src/maxo/bot/method_results/: __init__.py
src/maxo/bot/methods/: __init__.py  base.py
src/maxo/builders/: __init__.py  attachment_request.py  keyboard.py
src/maxo/dispatcher/: ctx.py  dispatcher.py  handler.py  long_polling.py  observer.py  router.py  sentinels.py
src/maxo/enums/: __init__.py  chat_admin_merpission_type.py  chat_status.py  chat_type.py  intent.py
src/maxo/errors/: __init__.py  api.py  base.py  routing.py  state.py
src/maxo/errors/types/: message_callback.py  message_created.py
src/maxo/facades/: __init__.py
src/maxo/facades/methods/: callback.py  message.py
src/maxo/facades/updates/: message_callback.py  message_created.py
src/maxo/filters/: __init__.py  base.py  command.py  error.py  logic.py  magic_filter.py  state.py
src/maxo/integrations/: dishka.py  magic_filter.py
src/maxo/integrations/redis/: event_isolation.py  storage.py
src/maxo/iterators/: chat_members.py  chats.py
src/maxo/kerno/bot/: api_client.py  bot.py  state.py  warming_up.py
src/maxo/kerno/routing/: __init__.py  ctx.py
src/maxo/kerno/types/: __init__.py  base.py  command_object.py  image.py  update_context.py  upload_media.py
src/maxo/methods/: __init__.py
src/maxo/methods/bots/: edit_me.py  get_me.py
src/maxo/methods/chats/: delete_chat.py  delete_chat_member.py  delete_pin_message.py  edit_chat.py  get_chat.py  get_chat_by_link.py  get_chats.py  remove_me_chat.py  send_chat_action.py  set_chat_admin.py
src/maxo/methods/messages/: callback_answer.py  delete_message.py  edit_message.py  get_message.py  get_messages.py  get_video_info.py  send_message.py
src/maxo/methods/subscriptions/: get_updates.py
src/maxo/methods/upload/: get_download_link.py  upload_media.py
src/maxo/middlewares/: __init__.py  base.py  error.py  facade.py  manager.py  state_manager.py  update_context.py
src/maxo/routing/: ctx.py
src/maxo/routing/dispatcher/: ctx.py  dispatcher.py  handler.py  long_polling.py  observer.py  router.py
src/maxo/routing/filters/: __init__.py  always.py  base.py  command.py  error.py  exception.py  logic.py  magic_filter.py  state.py
src/maxo/routing/handlers/: signal.py  update.py
src/maxo/routing/interfaces/: __init__.py  filter.py  handler.py  middleware.py  observer.py  router.py
src/maxo/routing/middlewares/: __init__.py  base.py  error.py  facade.py  manager.py  state.py  state_manager.py  update_context.py
src/maxo/routing/observers/: base.py  signal.py  state.py  update.py
src/maxo/routing/routers/: simple.py  state.py
src/maxo/state/: __init__.py  manager.py  state.py
src/maxo/types/: __init__.py  base.py  callback.py  chat.py  image.py  keyboard_buttons.py  maybe.py  update_context.py  upload_media.py  video_info.py
(+311 files in other folders)
